--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 
                 <article id="job">
                     <h2 class="major">Ideal Job</h2>
-                    <span class="image main"><img src="images/1.png" alt="Ideal job.jpg" /></span>
+                    <span class="image main"><img src="images/1.png" alt="" /></span>
+                    <span class="image main"><img src="images/seek.jpg"/></span>
                     <p>URL : https://www.seek.com.au/job/50328899?type=standard#searchRequestToken=0077c1f4-5f30-493f-9527-d09b71977782</p>
                     <p>  I think that for this position is to provide IT services to financial companies, especially for maintaining the company's website and responsible for the security of the website. And to provide IT technical support to customers and service providers.What attracts me most about this position is that it is in a financial company. I hope that my job can be integrated with the financial industry.In addition,this job may allow me to have more choices about where to work and I am satisfied with its salary.
                         For this position, at least 3 years of relevant IT work experience is required because it has a higher income. For the technical side, it requires employees to have sufficient web technologies and sufficient basic IT skills. What's more, employees need to have good communication skills when they face customers.
